--- a/My_openlayers_test/myol-how-to-add-mapcontrol/index-add-mapcontrol.html
+++ b/My_openlayers_test/myol-how-to-add-mapcontrol/index-add-mapcontrol.html
@@ -2,9 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>myol-how-to-add-mapcontrol</title>
+    <link rel="stylesheet" type="text/css" href="./libs/ol.css">
+    <script src="./libs/ol.js"></script>
+    <style>
+        #ol_map{
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+    <script type="text/javascript">
+        function init() {
+            //实例化Map对象，用于加载地图
+            var olmap = new ol.Map({
+                target:'olmap',//地图容器div的id
+                //在地图容器中加载的图层
+                layers:[
+                    //加载瓦片地图数据
+                    new ol.layer.Tile({
+                        source:new ol.source.OSM(),//加载osm瓦片地图
+                    }),
+                ],
+                //地图视图设置
+                view:new  ol.View({
+                    center:[0,0],
+                    zoom:2,
+                }),
+            });
+            //实例化ZoomSlider控件并加载到地图容器中
+            var zoomSlider = new ol.control.ZoomSlider();
+            olmap.addControl(zoomSlider);
+            //实例化zoomToExent控件并加载到地图容器中
+            var zoomToExent = new ol.control.ZoomToExtent({
+                extend:[13100000,42900000,13200000,5210000],
+            });
+            olmap.addControl(zoomToExent);
+        }
+    </script>
 </head>
-<body>
-$END$
+<body onload="init()">
+<div id="olmap" style="width: 100%;height: 100%">
+</div>
 </body>
 </html>
